--- a/main.ui
+++ b/main.ui
@@ -137,7 +137,7 @@
        <item>
         <widget class="QTabWidget" name="tabWidget">
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
@@ -228,7 +228,7 @@
               <enum>QFrame::Raised</enum>
              </property>
              <layout class="QGridLayout" name="gridLayout_3">
-              <item row="0" column="0">
+              <item row="0" column="0" colspan="2">
                <widget class="QLabel" name="dataLig1L">
                 <property name="font">
                  <font>
@@ -240,7 +240,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QDateEdit" name="dataLig1C">
                 <property name="font">
                  <font>
@@ -249,7 +249,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QLabel" name="resp1L">
                 <property name="font">
                  <font>
@@ -261,7 +261,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
+              <item row="0" column="4">
                <widget class="QComboBox" name="resp1C">
                 <property name="font">
                  <font>
@@ -282,8 +282,8 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QComboBox" name="resm1C">
+              <item row="1" column="1" colspan="4">
+               <widget class="QTextEdit" name="resm1C">
                 <property name="font">
                  <font>
                   <pointsize>17</pointsize>
@@ -302,8 +302,8 @@
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QGridLayout" name="gridLayout_5">
-              <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_4">
+              <item row="0" column="0" colspan="2">
                <widget class="QLabel" name="dataLig2L">
                 <property name="font">
                  <font>
@@ -315,7 +315,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QDateEdit" name="dataLig2C">
                 <property name="font">
                  <font>
@@ -324,7 +324,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QLabel" name="resp2L">
                 <property name="font">
                  <font>
@@ -336,7 +336,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
+              <item row="0" column="4">
                <widget class="QComboBox" name="resp2C">
                 <property name="font">
                  <font>
@@ -357,8 +357,8 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QComboBox" name="resm2C">
+              <item row="1" column="1" colspan="4">
+               <widget class="QTextEdit" name="resm2C">
                 <property name="font">
                  <font>
                   <pointsize>17</pointsize>
@@ -377,8 +377,8 @@
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QGridLayout" name="gridLayout_4">
-              <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_6">
+              <item row="0" column="0" colspan="2">
                <widget class="QLabel" name="dataLig3L">
                 <property name="font">
                  <font>
@@ -390,7 +390,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QDateEdit" name="dataLig3C">
                 <property name="font">
                  <font>
@@ -399,7 +399,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QLabel" name="resp3L">
                 <property name="font">
                  <font>
@@ -411,7 +411,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
+              <item row="0" column="4">
                <widget class="QComboBox" name="resp3C">
                 <property name="font">
                  <font>
@@ -432,8 +432,8 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QComboBox" name="resm3C">
+              <item row="1" column="1" colspan="4">
+               <widget class="QTextEdit" name="resm3C">
                 <property name="font">
                  <font>
                   <pointsize>17</pointsize>
@@ -452,8 +452,8 @@
              <property name="frameShadow">
               <enum>QFrame::Raised</enum>
              </property>
-             <layout class="QGridLayout" name="gridLayout_6">
-              <item row="0" column="0">
+             <layout class="QGridLayout" name="gridLayout_5">
+              <item row="0" column="0" colspan="2">
                <widget class="QLabel" name="dataLig4L">
                 <property name="font">
                  <font>
@@ -465,7 +465,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QDateEdit" name="dataLig4C">
                 <property name="font">
                  <font>
@@ -474,7 +474,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QLabel" name="resp4L">
                 <property name="font">
                  <font>
@@ -486,7 +486,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
+              <item row="0" column="4">
                <widget class="QComboBox" name="resp4C">
                 <property name="font">
                  <font>
@@ -507,8 +507,8 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QComboBox" name="resm4C">
+              <item row="1" column="1" colspan="4">
+               <widget class="QTextEdit" name="resm4C">
                 <property name="font">
                  <font>
                   <pointsize>17</pointsize>
@@ -528,7 +528,7 @@
               <enum>QFrame::Raised</enum>
              </property>
              <layout class="QGridLayout" name="gridLayout_7">
-              <item row="0" column="0">
+              <item row="0" column="0" colspan="2">
                <widget class="QLabel" name="dataLig5L">
                 <property name="font">
                  <font>
@@ -540,7 +540,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QDateEdit" name="dataLig5C">
                 <property name="font">
                  <font>
@@ -549,7 +549,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QLabel" name="resp5L">
                 <property name="font">
                  <font>
@@ -561,7 +561,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="3">
+              <item row="0" column="4">
                <widget class="QComboBox" name="resp5C">
                 <property name="font">
                  <font>
@@ -582,8 +582,8 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QComboBox" name="resm5C">
+              <item row="1" column="1" colspan="4">
+               <widget class="QTextEdit" name="resm5C">
                 <property name="font">
                  <font>
                   <pointsize>17</pointsize>
