login system completed

--- a/login.ui
+++ b/login.ui
@@ -30,6 +30,9 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="senhaC"/>
+      </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="userC"/>
       </item>
@@ -40,8 +43,12 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="senhaC"/>
+      <item row="2" column="0" colspan="2">
+       <widget class="QPushButton" name="loginB">
+        <property name="text">
+         <string>ENTRAR</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
