--- a/main.ui
+++ b/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1267</width>
-    <height>962</height>
+    <height>967</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -148,18 +148,18 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
+      <layout class="QGridLayout" name="gridLayout_8">
+       <item row="0" column="0">
         <widget class="QTabWidget" name="tabWidget">
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
            <string>DADOS LIGAÇÃO</string>
           </attribute>
-          <layout class="QGridLayout" name="gridLayout_8">
-           <item row="0" column="0">
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
             <widget class="QFrame" name="f1">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -349,7 +349,7 @@
              </layout>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item>
             <widget class="QFrame" name="f2">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -464,7 +464,7 @@
              </layout>
             </widget>
            </item>
-           <item row="2" column="0">
+           <item>
             <widget class="QFrame" name="f4">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -579,7 +579,7 @@
              </layout>
             </widget>
            </item>
-           <item row="3" column="0">
+           <item>
             <widget class="QFrame" name="f3">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -694,7 +694,7 @@
              </layout>
             </widget>
            </item>
-           <item row="4" column="0">
+           <item>
             <widget class="QFrame" name="f5">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -809,7 +809,7 @@
              </layout>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item>
             <widget class="QFrame" name="f6">
              <property name="frameShape">
               <enum>QFrame::StyledPanel</enum>
@@ -919,6 +919,40 @@
                   <string>MARYANNY SETOR CAPTÇÃO</string>
                  </property>
                 </item>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QFrame" name="frame_5">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>30</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>30</height>
+              </size>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::StyledPanel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_11">
+              <item row="0" column="0">
+               <widget class="QLabel" name="attL">
+                <property name="text">
+                 <string> </string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
                </widget>
               </item>
              </layout>
