pdf export system added

--- a/main.ui
+++ b/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1267</width>
-    <height>967</height>
+    <height>1003</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,10 +58,32 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="5" colspan="2">
+       <item row="0" column="5">
         <widget class="QPushButton" name="reloadB">
          <property name="text">
           <string>ATUALIZAR</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="6">
+        <widget class="QPushButton" name="pdfB">
+         <property name="text">
+          <string>EXPORTAR PARA PDF</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="7">
+        <widget class="QLabel" name="contagemL">
+         <property name="font">
+          <font>
+           <pointsize>17</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -119,21 +141,6 @@
           <font>
            <pointsize>17</pointsize>
           </font>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="7">
-        <widget class="QLabel" name="contagemL">
-         <property name="font">
-          <font>
-           <pointsize>17</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>0</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -948,7 +955,7 @@
               <item row="0" column="0">
                <widget class="QLabel" name="attL">
                 <property name="text">
-                 <string> </string>
+                 <string/>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
